<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.LoaiVaiActivity">

    <EditText
        android:id="@+id/txt_vai_ms"
        style="@style/editstyle"
        android:ems="10"
        android:hint="@string/mavai"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_vai_Ten"
        style="@style/editstyle"
        android:ems="10"
        android:hint="@string/tenvai"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_vai_xuatxu"
       style="@style/editstyle"
        android:ems="10"
        android:hint="@string/xuatxu"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_vai_them"
         style="@style/btnkho"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_vai_sua"
            style="@style/btnkho"
            android:enabled="false"
            android:text="@string/change" />

        <Button
            android:id="@+id/btn_vai_xoa"
            style="@style/btnkho"
            android:enabled="false"
            android:text="@string/del" />
    </LinearLayout>

    <ListView
        android:id="@+id/vaiLW"
        style="@style/list"></ListView>

</LinearLayout>