<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".GiaoDien.KhoActivity">

    <EditText
        android:id="@+id/txt_kho_ms"
        style="@style/editstyle"
        android:ems="10"
        android:hint="@string/Makho"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_kho_Ten"
        style="@style/editstyle"
        android:ems="10"
        android:hint="@string/TenKho"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_kho_diachi"
        style="@style/editstyle"
        android:ems="10"
        android:hint="@string/diachi"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_kho_them"
            style="@style/btnkho"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_kho_sua"
            style="@style/btnkho"
            android:enabled="false"
            android:text="@string/change" />

        <Button
            android:id="@+id/btn_kho_xoa"
            style="@style/btnkho"
            android:enabled="false"
            android:text="@string/del" />
    </LinearLayout>

    <ListView
        android:id="@+id/kho_listview"
       style="@style/list" />

</LinearLayout>