<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/input" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_phieunhap_stt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                  style="@style/txtphieunhap"
                    android:gravity="center|right|center_horizontal"
                    android:text="@string/ngay" />

                <TextView
                    android:id="@+id/txt_phieunhap_ngay"
                    style="@style/txtphieunhap"
                    android:gravity="left"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/txtphieunhap"
                    android:gravity="right"
                    android:text="@string/loai_vai" />

                <TextView
                    android:id="@+id/txt_phieunhap_loaivai"
                    style="@style/txtphieunhap"
                    android:gravity="left"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/txtphieunhap"
                    android:gravity="right"
                    android:text="@string/Makho" />

                <TextView
                    android:id="@+id/txt_phieunhap_makho"
                    style="@style/txtphieunhap"
                    android:gravity="left"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    style="@style/txtphieunhap"
                    android:gravity="right"
                    android:text="@string/soluong" />

                <TextView
                    android:id="@+id/txt_phieunhap_soluong"
                    style="@style/txtphieunhap"
                    android:gravity="left"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>